# ePaper

./: .gitignore  CMakeLists.txt
functions/: CMakeLists.txt  ColorConvert.cpp  ColorCorrect.cpp  Filter.cpp  Halftone.cpp  Histogram.cpp  Measure.cpp  SaveData.cpp  WhiteBalance.cpp
include/: ColorChecker.hpp  ColorConvert.hpp  ColorCorrect.hpp  Filter.hpp  Functions.hpp  Halftone.hpp  Histogram.hpp  Measure.hpp  PSO.hpp  SaveData.hpp  WhiteBalance.hpp
source/: AdjustEPD.cpp  DBS.cpp  Dithering.cpp  TestHF.cpp  TestVC.cpp
